--- a/algoritmos/index.html
+++ b/algoritmos/index.html
@@ -29,6 +29,8 @@
                 <tbody>
                 </tbody>
             </table>
+
+            <button id="download-button">Download PDF</button>
         </div>
     </div>
 
